# cricket_scoring

./: .gitignore  CLAUDE.md  Cargo.toml  balls.txt  get_matches.sh
.gitea/workflows/: tests.yml
examples/: cricsheet.rs  cricsheet_utils.rs  file.rs  manual.rs  match_with_method.rs
examples/cricsheet_lib/: mod.rs
examples/cricsheet_lib/custom_deserialisers/: mod.rs  option_string.rs  string.rs
examples/shared/: cricsheet_utils.rs
src/: error.rs  lib.rs  scoring.rs
src/cricsheet/: mod.rs  utils.rs
src/scoring/: ball.rs  game.rs  innings.rs  match.rs  mod.rs  player.rs  score.rs  scoring_util.rs
tests/: integration_test.rs  serialization.rs
