[package]
name = "cricket_scoring"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"], optional = true }
serde_json = { version = "1.0.134", optional = true }

[dev-dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.134"

[features]
cricsheet = ["chrono", "serde_json"]

[[example]]
name = "cricsheet"
required-features = ["cricsheet"]
